styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: 'Raleway';
  src: url('/Raleway.ttf') format('truetype');
}

@font-face {
  font-family: 'Raleway-Black';
  src: url('/Raleway-Black.ttf') format('truetype');
}

/* ============== Paddings and stuff ============== */

main {
  padding-top: 0rem;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  overflow: hidden;
}

/* sm */
@media (min-width: 640px) {
  main {
    padding-top: 0rem;
    padding-left: 6rem;
    padding-right: 6rem;
  }
}

/* md */
@media (min-width: 768px) {
  main {
    padding-top: 0rem;
    padding-left: 6rem;
    padding-right: 6rem;
  }
}

/* xl */
@media (min-width: 1280px) { 
  main {
    padding-top: 0rem;
    padding-left: 12rem;
    padding-right: 12rem;
  }
}

/* 2xl */
@media (min-width: 1536px) { 
  main {
    padding-top: 4rem;
    padding-left: 24rem;
    padding-right: 24rem;
  }
}

@media (min-width: 2000px) { 
  main {
    padding-top: 6rem;
    padding-left: 32rem;
    padding-right: 32rem;
  }
}

body {
  /* background-color: rgb(16, 16, 16); */
  background-image: url('/bg-2.svg');
  background-size: cover;
  color: white;
  font-family: 'Roboto', sans-serif;
  font-weight: 200;
  font-size: small;
}

/* ============== below md =============== */

h1 {
  font-family: 'Raleway';
  font-size: 2.7rem;
  font-variation-settings: "wght" 750;
}

h2 {
  font-family: 'Raleway';
  font-size: 1.2rem;
  font-variation-settings: "wght" 600;
}

h3 {
    font-family: 'Raleway';
    font-size: medium;
    font-variation-settings: "wght" 500;
}

h4 {
  font-family: 'Raleway';
  font-size: small;
  font-variation-settings: "wght" 500;
}

sub {
  font-size: small;
  font-variation-settings: "wght" 100;
}

/* ============== MD screens =============== */

@media (min-width: 768px) {
  body {
    font-size: 1rem;
  }
  h1 {
    font-size: 2.85rem;
  }
  h2 {
    font-size: larger;
  }
  h3 {
    font-size: medium;
  }
  h4 {
    font-size: 0.9rem;
  }
}

/* ============== XL screens =============== */

@media (min-width: 1280px) {
  body {
    font-size: medium;
  }
  h1 {
    font-size: 3.1rem;
  }
  h2 {
    font-size: x-large;
  }
  h3 {
    font-size: large;
  }
  h4 {
    font-size: medium;
  }
}

/* ============== 2XL screens =============== */

@media (min-width: 1536px) {
  h1 {
    font-size: 4rem;
  }
  h2 {
    font-size: xx-large;
  }
  h3 {
    font-size: larger;
  }
}

/* Lists & Paragraphs */

ul {
  list-style-type: disc;
  list-style-position: inside;
}

/* Links, Images, etc. */

Link, a {
  color:cornflowerblue;
}

Link, a:hover {
  color:rgb(127, 172, 255);
}

Link, a:active {
  color: blue;
}

/* Tooltip Container */
.tooltip {
  position: relative;
  display: inline-block;
}

/* Tooltip text */
.tooltip .tooltiptext {
  visibility: hidden;
  width: 100px;
  background-color: whitesmoke;
  color: black;
  text-align: center;
  padding: 5px 0;
  border-radius: 6px;
  font-size: smaller;
  position: absolute;
  top: 100%;
  left: 50%;
  z-index: 200;
  pointer-events: none;
}

/* Show the tooltip text when you mouse over the tooltip container */
.tooltip:hover .tooltiptext {
  visibility: visible;
  transform: translate(-0%, 0);
  bottom: -40%;
  left: -16%;
  z-index: 200;
}

.custom-pagination{
  background: rgb(255, 255, 255);
  border-radius: 9999px;
  border: 1px solid black;
}

